# audio-dl

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  LOOPS.md  NOTICE.md  README.md  _app_entry.py  audio-dl.spec  audio_dl.py  audio_dl_ui.py  pyproject.toml  test_audio_dl.py  test_audio_dl_related.py  test_audio_dl_ui.py
.github/: dependabot.yml
.github/workflows/: mirror-public.yml  pages.yml  pylint.yml  release.yml  tag-release.yml  tests.yml
audio_dl_ui/: __init__.py  related.py
docs/: advisor-tool.md  git-strategy.md
docs/superpowers/plans/: 2026-05-10-web-ui.md  2026-05-11-v1.2.1-codex-fixes.md  2026-05-13-release-pipeline.md  2026-05-15-console-ui-themes.md  2026-05-16-per-theme-card-variations.md  2026-05-16-rich-job-cards.md  2026-05-19-per-url-format.md  2026-06-03-web-ui-v2-react-rewrite.md  2026-06-09-web-ui-toast-notifications.md  2026-06-28-web-ui-colorful-dual-mode-foundation.md  2026-07-01-backend-modernization.md  2026-07-03-related-content-discovery.md
docs/superpowers/specs/: 2026-05-10-web-ui-design.md  2026-05-13-app-bundle.md  2026-05-13-release-pipeline.md  2026-05-14-console-ui-themes.md  2026-05-16-per-theme-card-variations-design.md  2026-05-16-rich-job-cards-design.md  2026-05-19-per-url-format-design.md  2026-05-19-ux-rearchitecture.md  2026-06-03-web-ui-v2-react-rewrite-design.md  2026-06-09-web-ui-toast-notifications-design.md  2026-06-28-web-ui-colorful-dual-mode-foundation-design.md  (+3 more)
scripts/: build-app.sh  build-web.sh  claude-loop.sh  extract_changelog.py  package-release.sh  publish.sh  smoke-test-bundle.sh
scripts/release-templates/: README-FIRST.txt
site/: index.html  main.js  style.css
web/: .gitignore  biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx  setupTests.ts
web/src/components/: album-art.test.tsx  (+29 more)
(+44 files in other folders)
