[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-dl"
version = "1.6"
description = "Download high-quality audio from YouTube, SoundCloud, and any other site yt-dlp supports."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["yt-dlp"]

[project.optional-dependencies]
ui = ["fastapi", "uvicorn[standard]", "httpx"]
# Build-time deps for the macOS .app bundle (Phase 3b: embedded ffmpeg).
# Install with: pip install -e '.[ui,app]'
app = ["imageio-ffmpeg"]

[project.scripts]
audio-dl = "audio_dl:main"
audio-dl-ui = "audio_dl_ui:main"

[tool.setuptools]
py-modules = ["audio_dl", "audio_dl_ui"]
